Added welcome div

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <h1>About Piper</h1>
     </header>
 
+    <div id = "welcome"> 
+        <p>Time of day</p>
+    </div>
+
     <section>
         <h2>Quick Bio</h2>
         <div>
